Only build mastaer

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ notifications:
     on_success: never
     on_failure: change
 
+branches:
+  only:
+    - master
+
 language: node_js
 node_js:
   - "node"
