Rollback to an earlier version of electron-mocha where failing tests actually fail.
https://github.com/jprichardson/electron-mocha/pull/60 is the real fix,
but in the mean time we can keep moving.

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
-    "electron-mocha": "^1.2.2",
-    "electron-prebuilt": "^1.0.1",
+    "electron-mocha": "1.2.0",
+    "electron-prebuilt": "^0.37.8",
     "express": "^4.13.4",
     "mocha": "^2.4.5",
     "npm-run-all": "^1.8.0",
