--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "jsx": "react",
-    "outDir": "../build/app"
+    "outDir": "./build/app"
   },
   "exclude": [
     "node_modules",
