Don't compile tests.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "out",
     "build",
     "typings/main",
-    "typings/main.d.ts"
+    "typings/main.d.ts",
+    "test"
   ],
   "compileOnSave": false
 }
