--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "postinstall": "typings install",
     "start-server": "node dev_server.js",
     "start": "npm run build && npm-run-all --parallel dev start-server",
-    "dev": "env NODE_ENV=development electron . --debug",
+    "dev": "env NODE_ENV=development node script/run",
     "compile": "tsc && webpack",
     "build": "npm run compile && node script/package",
     "clean": "rm -rf build",
