--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "babel-runtime": "^6.6.1",
     "octokat": "^0.5.0-beta.0",
     "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react-dom": "^15.0.2"
+  },
+  "debugDependencies": {
     "react-transform-hmr": "^1.0.4",
     "webpack-hot-middleware": "^2.10.0"
   },
