Package for release or debug.

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "test": "electron-mocha --renderer --require ts-node/register test/*.ts test/*.tsx",
     "postinstall": "typings install",
     "start-server": "node dev_server.js",
-    "start": "npm run build && npm-run-all --parallel dev start-server",
-    "dev": "env NODE_ENV=development node script/run",
+    "start": "npm run pkg:debug && npm-run-all --parallel run start-server",
+    "run": "env NODE_ENV=development node script/run",
     "compile": "tsc && webpack",
-    "build": "npm run compile && node script/package",
+    "pkg:debug": "npm run compile && env NODE_ENV=development node script/package",
+    "pkg:release": "npm run compile && env NODE_ENV=production node script/package",
     "clean": "rm -rf build",
-    "rebuild": "npm run clean && npm run build",
+    "rebuild": "npm run clean && npm run pkg:debug",
     "lint": "tslint ./src/**/*.ts ./src/**/*.tsx ./test/**/*.ts ./test/**/*.tsx"
   },
   "author": "",
