--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "test": "electron-mocha --renderer --require ts-node/register test/*.ts test/*.tsx",
     "postinstall": "typings install",
     "start-server": "node dev_server.js",
-    "start": "npm run pkg:debug && npm-run-all --parallel run start-server",
+    "start": "npm run build:debug && npm-run-all --parallel run start-server",
     "run": "env NODE_ENV=development node script/run",
     "compile:debug": "tsc && env NODE_ENV=development webpack --config webpack.development.js",
     "compile:release": "tsc && env NODE_ENV=production webpack --config webpack.production.js",
-    "pkg:debug": "npm run compile:debug && env NODE_ENV=development node script/package",
-    "pkg:release": "npm run compile:release && env NODE_ENV=production node script/package",
+    "build:debug": "npm run compile:debug && env NODE_ENV=development node script/build",
+    "build:release": "npm run compile:release && env NODE_ENV=production node script/build",
     "clean": "rm -rf build",
-    "rebuild": "npm run clean && npm run pkg:debug",
+    "rebuild": "npm run clean && npm run build:debug",
     "lint": "tslint ./src/**/*.ts ./src/**/*.tsx ./test/**/*.ts ./test/**/*.tsx"
   },
   "author": "",
