--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "electron-mocha": "2.1.0",
     "electron-packager": "^7.0.1",
     "electron-prebuilt": "^1.1.2",
+    "electron-winstaller": "^2.3.0",
     "express": "^4.13.4",
     "fs-extra": "^0.30.0",
     "mocha": "^2.4.5",
