More consistent naming

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "start-server": "node dev_server.js",
     "start": "npm run build:dev && npm-run-all --parallel run start-server",
     "run": "env NODE_ENV=development node script/run",
-    "compile:debug": "tsc && env NODE_ENV=development webpack --config webpack.development.js",
-    "compile:release": "tsc && env NODE_ENV=production webpack --config webpack.production.js",
-    "build:dev": "npm run compile:debug && env NODE_ENV=development node script/build",
-    "build:prod": "npm run compile:release && env NODE_ENV=production node script/build",
+    "compile:dev": "tsc && env NODE_ENV=development webpack --config webpack.development.js",
+    "compile:prod": "tsc && env NODE_ENV=production webpack --config webpack.production.js",
+    "build:dev": "npm run compile:dev && env NODE_ENV=development node script/build",
+    "build:prod": "npm run compile:prod && env NODE_ENV=production node script/build",
     "package": "node script/package",
     "clean": "rm -rf build",
     "rebuild": "npm run clean && npm run build:dev",
