--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ addons:
     packages:
       - g++-4.8
 
+cache:
+  directories:
+    - node_modules
+
 install:
   - npm install
 
@@ -32,6 +36,6 @@ script:
   - npm run build:prod
   - npm test
 
-cache:
-  directories:
-    - node_modules
+deploy:
+  provider: script
+  script: node script/publish
