--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.6.1",
+    "keytar": "^3.0.2",
     "octokat": "^0.5.0-beta.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
