Use the main typings instead of browser

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "node_modules",
     "dist",
     "build",
-    "typings/main",
-    "typings/main.d.ts",
+    "typings/browser",
+    "typings/browser.d.ts",
     "test"
   ],
   "compileOnSave": false
