--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ notifications:
     on_success: never
     on_failure: change
 
+os:
+  - osx
+
 branches:
   only:
     - master
@@ -21,17 +24,14 @@ addons:
     packages:
       - g++-4.8
 
+cache:
+  directories:
+    - node_modules
+
 install:
   - npm install
-
-before_script:
-  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 
 script:
   - npm run lint
   - npm run build:prod
   - npm test
-
-cache:
-  directories:
-    - node_modules
