These are still dev dependencies too.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "fs-extra": "^0.30.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.0.2",
+    "react-transform-hmr": "^1.0.4",
     "ts-loader": "^0.8.2",
     "ts-node": "^0.7.2",
     "tslint": "^3.9.0",
@@ -61,6 +62,7 @@
     "typings": "^0.7.12",
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0",
     "webpack-target-electron-renderer": "^0.4.0"
   }
 }
