--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "test": "electron-mocha --renderer --require ts-node/register test/*.ts test/*.tsx",
     "postinstall": "typings install",
     "start": "npm run build:dev && node script/start",
-    "compile:dev": "tsc && env NODE_ENV=development webpack --config webpack.development.js",
-    "compile:prod": "tsc && env NODE_ENV=production webpack --config webpack.production.js",
-    "build:dev": "npm run compile:dev && env NODE_ENV=development node script/build",
-    "build:prod": "npm run compile:prod && env NODE_ENV=production node script/build",
+    "compile:dev": "tsc && cross-env NODE_ENV=development webpack --config webpack.development.js",
+    "compile:prod": "tsc && cross-env NODE_ENV=production webpack --config webpack.production.js",
+    "build:dev": "npm run compile:dev && cross-env NODE_ENV=development node script/build",
+    "build:prod": "npm run compile:prod && cross-env NODE_ENV=production node script/build",
     "package": "node script/package",
     "clean": "rimraf build",
     "rebuild:dev": "npm run clean && npm run build:dev",
@@ -49,6 +49,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "cross-env": "^1.0.8",
     "electron-mocha": "2.1.0",
     "electron-packager": "^7.0.1",
     "electron-prebuilt": "1.1.3",
