--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
-    "webpack-target-electron-renderer": "^0.4.0"
+    "webpack-target-electron-renderer": "^0.4.0",
+    "xml2js": "^0.4.16"
   }
 }
