--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "electron-winstaller": "^2.3.0",
     "express": "^4.13.4",
     "fs-extra": "^0.30.0",
+    "got": "^6.3.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.0.2",
     "react-transform-hmr": "^1.0.4",
