--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "cross-env": "^1.0.8",
+    "css-loader": "^0.23.1",
     "electron-mocha": "2.1.0",
     "electron-packager": "^7.0.1",
     "electron-prebuilt": "1.1.3",
@@ -62,10 +63,13 @@
     "fs-extra": "^0.30.0",
     "got": "^6.3.0",
     "mocha": "^2.4.5",
+    "node-sass": "^3.7.0",
     "react-addons-test-utils": "^15.0.2",
     "react-transform-hmr": "^1.0.4",
     "request": "^2.72.0",
     "rimraf": "^2.5.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "to-camel-case": "^1.0.0",
     "ts-loader": "^0.8.2",
     "ts-node": "^0.7.2",
