--- a/script/build
+++ b/script/build
@@ -35,7 +35,6 @@ const options = {
   prune: false, // We only install production dependencies above.
 
   // OS X
-  // TODO: We'll need to sign this shit.
   'app-bundle-id': appPackage.bundleID,
   'app-category-type': 'public.app-category.developer-tools',
   'protocols': [
@@ -46,6 +45,7 @@ const options = {
       ]
     }
   ],
+  'osx-sign': true,
 
   // Windows
   'version-string': {
