Download the certificate on macOS

--- a/script/build
+++ b/script/build
@@ -57,6 +57,10 @@ const options = {
   }
 }
 
+if (process.platform === 'darwin') {
+  cp.execSync('setup-macos-keychain')
+}
+
 packager(options, (error, appPaths) => {
   if (error) {
     console.error(error)
