--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "electron-prebuilt": "1.1.3",
     "electron-winstaller": "^2.3.0",
     "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
     "fs-extra": "^0.30.0",
     "got": "^6.3.0",
     "html-webpack-plugin": "^2.21.0",
