--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "event-kit": "^2.0.0",
     "keytar": "^3.0.2",
     "octokat": "^0.5.0-beta.0",
+    "ohnogit": "0.0.14",
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
   },
