added new submodule to path

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "git/git-macos"]
 	path = git/git-macos
 	url = git@github.com:desktop/git-macos.git
+[submodule "git/git-win32"]
+	path = git/git-win32
+	url = https://github.com/desktop/git-win32.git
