recursive copy all the things

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "got": "^6.3.0",
     "html-webpack-plugin": "^2.21.0",
     "mocha": "^2.4.5",
+    "ncp": "^2.0.0",
     "node-sass": "^3.7.0",
     "react-addons-test-utils": "^15.0.2",
     "react-transform-hmr": "^1.0.4",
