--- a/script/build
+++ b/script/build
@@ -11,6 +11,9 @@ const projectRoot = path.join(__dirname, '..')
 const buildRoot = path.join(projectRoot, 'build')
 const appPackage = require(path.join(projectRoot, 'package.json'))
 
+const ncp = require('ncp').ncp;
+ncp.limit = 16;
+
 console.log(`Building for ${process.env.NODE_ENV}…`)
 
 console.log('Removing old distribution…')
@@ -18,6 +21,9 @@ fs.removeSync(path.join(projectRoot, 'dist'))
 
 console.log('Installing dependencies…')
 installDependencies()
+
+console.log('Packaging git.exe…')
+copyGitDirectory()
 
 const options = {
   platform: process.platform,
@@ -51,7 +57,6 @@ const options = {
     }
   ],
   'osx-sign': true,
-  'extra-resource': [path.join(projectRoot, 'git', 'git-macos', 'git')],
 
   // Windows
   'version-string': {
@@ -76,6 +81,27 @@ packager(options, (error, appPaths) => {
     process.exit(0)
   }
 })
+
+function copyGitDirectory () {
+  let destination = path.join(projectRoot, 'build', 'git')
+  let source = projectRoot
+
+  if (process.platform === 'darwin') {
+    source = path.join(projectRoot, 'git', 'git-macos', 'git')
+  } else if (process.platform === 'win32') {
+    source = path.join(projectRoot, 'git', 'git-win32', 'git')
+  } else {
+    console.error(`No Git provided for platform ${process.platform} :(`)
+    process.exit(1)
+  }
+
+  ncp(source, destination, function (err) {
+   if (err) {
+    console.error(err)
+    process.exit(1)
+   }
+  });
+}
 
 function installDependencies () {
   fs.copySync(path.join(projectRoot, '.npmrc'), path.join(buildRoot, '.npmrc'))
