what even are remotes

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:desktop/git-macos.git
 [submodule "git/git-win32"]
 	path = git/git-win32
-	url = https://github.com/desktop/git-win32.git
+	url = git@github.com:desktop/git-win32.git
