--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ version: "{build}"
 
 install:
   - ps: Install-Product node $env:nodejs_version
-  - npm install node-gyp@3.4.0
+  - npm install node-gyp@3.4.0 -g
   - npm install
 
 build_script:
