--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-runtime": "^6.6.1",
     "event-kit": "^2.0.0",
     "keytar": "^3.0.2",
+    "node-gyp": "^3.4.0",
     "octokat": "^0.5.0-beta.0",
     "ohnogit": "0.0.14",
     "react": "^15.0.2",
