--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.6.1",
+    "dexie": "^1.4.1",
     "event-kit": "^2.0.0",
     "keytar": "^3.0.2",
     "octokat": "^0.5.0-beta.0",
