Don't copy object files

--- a/script/build
+++ b/script/build
@@ -39,6 +39,7 @@ const options = {
     '/\\.git($|/)',
     '/node_modules/\\.bin($|/)',
     '/node_modules/nodegit/vendor/libgit2/tests($|/)',
+    '/node_modules/nodegit/build/Release/obj.target($|/)',
     '/node_modules/ohnogit/spec($|/)'
   ],
 
