--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "babel-runtime": "^6.6.1",
     "dexie": "^1.4.1",
+    "electron-window-state": "^3.0.3",
     "event-kit": "^2.0.0",
     "keytar": "^3.0.2",
     "octokat": "^0.5.0-beta.0",
