--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "ts-loader": "^0.8.2",
     "ts-node": "^0.7.2",
     "tslint": "^3.9.0",
-    "typescript": "^1.8.10",
+    "typescript": "beta",
     "typings": "^0.7.12",
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.6.1",
