--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "strictNullChecks": true,
+    "noUnusedLocals": true,
     "sourceMap": true,
     "jsx": "react",
     "outDir": "./build/app"
