--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "target": "es6",
     "noImplicitAny": true,
     "noImplicitReturns": true,
+    "noImplicitThis": true,
     "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
     "strictNullChecks": true,
     "sourceMap": true,
     "jsx": "react",
