--- a/script/build
+++ b/script/build
@@ -39,11 +39,7 @@ const options = {
     '/node_modules/electron-prebuilt($|/)',
     '/node_modules/electron-packager($|/)',
     '/\\.git($|/)',
-    '/node_modules/\\.bin($|/)',
-    '/node_modules/nodegit/vendor/libgit2/tests($|/)',
-    '/node_modules/nodegit/build/Release/obj.target($|/)',
-    '/node_modules/nodegit/vendor($|/)',
-    '/node_modules/ohnogit/spec($|/)'
+    '/node_modules/\\.bin($|/)'
   ],
 
   // macOS
