--- a/app/package.json
+++ b/app/package.json
@@ -23,10 +23,12 @@
     "react-dom": "^15.2.1"
   },
   "devDependencies": {
+    "fs-extra": "^0.30.0",
     "react-addons-perf": "^15.2.1",
     "react-addons-test-utils": "^15.2.1",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.13.1",
+    "temp": "^0.8.3",
     "webpack-hot-middleware": "^2.10.0"
   }
 }
