--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "electron-window-state": "^3.0.3",
     "event-kit": "^2.0.0",
     "keytar": "^3.0.2",
+    "moment": "^2.14.1",
     "octokat": "^0.5.0-beta.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
