--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,10 @@
     "keytar": "^3.0.2",
     "moment": "^2.14.1",
     "octokat": "^0.5.0-beta.0",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react": "^15.3.0",
+    "react-addons-shallow-compare": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-virtualized": "^7.16.0"
   },
   "devDependencies": {
     "fs-extra": "^0.30.0",
