--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "css-loader": "^0.23.1",
     "electron-mocha": "2.1.0",
     "electron-packager": "^7.2.0",
-    "electron-prebuilt": "1.3.1",
+    "electron": "1.3.1",
     "electron-winstaller": "^2.3.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
