--- a/package.json
+++ b/package.json
@@ -65,5 +65,19 @@
     "webpack-hot-middleware": "^2.10.0",
     "webpack-target-electron-renderer": "^0.4.0",
     "xml2js": "^0.4.16"
+  },
+  "devDependencies": {
+    "@types/chai": "^3.4.30",
+    "@types/electron": "^1.3.15",
+    "@types/electron-window-state": "^2.0.27",
+    "@types/event-kit": "^1.2.28",
+    "@types/keytar": "^3.0.28",
+    "@types/mocha": "^2.2.29",
+    "@types/moment": "^2.11.29",
+    "@types/node": "^6.0.31",
+    "@types/react": "^0.14.28",
+    "@types/react-addons-test-utils": "^0.14.14",
+    "@types/react-dom": "^0.14.14",
+    "@types/whatwg-fetch": "0.0.28"
   }
 }
