--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,9 @@
   },
   "exclude": [
     "node_modules",
+    "app/node_modules",
     "dist",
-    "out",
-    "typings/browser",
-    "typings/browser.d.ts",
-    "app/node_modules"
+    "out"
   ],
   "compileOnSave": false
 }
