--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,8 @@
     "react": "^15.3.0",
     "react-addons-shallow-compare": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-virtualized": "^7.16.0"
+    "react-virtualized": "^7.16.0",
+    "untildify": "^3.0.2"
   },
   "devDependencies": {
     "fs-extra": "^0.30.0",
