--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "chai-as-promised": "^5.3.0",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
-    "electron-mocha": "2.1.0",
-    "electron-packager": "7.2.0",
-    "electron-prebuilt": "1.3.1",
+    "electron-mocha": "3.0.4",
+    "electron-packager": "7.7.0",
+    "electron": "1.3.3",
     "electron-winstaller": "^2.3.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
