Pin to 0.14.28 exactly.
Fixes #297

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@types/mocha": "^2.2.29",
     "@types/moment": "^2.11.29",
     "@types/node": "^6.0.31",
-    "@types/react": "^0.14.28",
+    "@types/react": "0.14.28",
     "@types/react-addons-test-utils": "^0.14.14",
     "@types/react-dom": "^0.14.14",
     "@types/whatwg-fetch": "0.0.28"
