Register for the old URL protocol

--- a/script/build
+++ b/script/build
@@ -55,7 +55,8 @@ const options = {
     {
       name: 'GitHub Auth',
       schemes: [
-        'x-github-client'
+        'x-github-client',
+        'github-mac'
       ]
     }
   ],
