Update ignore pattern from electron-prebuilt

--- a/script/build
+++ b/script/build
@@ -40,7 +40,7 @@ const options = {
   derefSymlinks: false,
   prune: false, // We'll prune them ourselves below.
   ignore: [
-    '/node_modules/electron-prebuilt($|/)',
+    '/node_modules/electron($|/)',
     '/node_modules/electron-packager($|/)',
     '/\\.git($|/)',
     '/node_modules/\\.bin($|/)'
