--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "chai-as-promised": "^5.3.0",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
-    "electron": "1.3.4",
     "electron-mocha": "3.0.5",
     "electron-packager": "7.7.0",
+    "electron": "1.3.4",
     "electron-winstaller": "^2.3.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -61,7 +61,7 @@
     "ts-loader": "^0.8.2",
     "ts-node": "^1.3.0",
     "tslint": "^3.14.0",
-    "typescript": "^2.0.2",
+    "typescript": "beta",
     "vrsource-tslint-rules": "^0.12.0",
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.6.1",
