--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react-addons-shallow-compare": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-virtualized": "^7.16.0",
+    "snake-case": "^2.1.0",
     "untildify": "^3.0.2"
   },
   "devDependencies": {
