Splt the output from git by line, not by arbitrary stdio chunks
Note that I chose to pin byline at version 4.2.2 because I thought
this[1] change in 5.0.0 was just sillygoose and asking for trouble.

1. https://github.com/jahewson/node-byline/compare/v4.2.2...v5.0.0

--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.6.1",
+    "byline": "^4.2.2",
     "dexie": "^1.4.1",
     "electron-window-state": "^3.0.3",
     "event-kit": "^2.0.0",
