--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^15.3.0",
     "react-virtualized": "^7.16.0",
     "snake-case": "^2.1.0",
+    "textarea-caret": "^3.0.1",
     "untildify": "^3.0.2"
   },
   "devDependencies": {
