--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "octokat": "^0.5.0-beta.0",
     "react": "^15.3.0",
     "react-addons-shallow-compare": "^15.3.0",
+    "react-codemirror": "^0.2.6",
     "react-dom": "^15.3.0",
     "react-virtualized": "^7.16.0",
     "snake-case": "^2.1.0",
