Provide our own set of code signing requirements
This means both the main process and renderer can access our creds.

--- a/script/build
+++ b/script/build
@@ -58,7 +58,10 @@ const options = {
       ]
     }
   ],
-  'osx-sign': true,
+  'osx-sign': {
+    'identity': 'Developer ID Application: GitHub',
+    'requirements': path.join(__dirname, '..', 'GitHub.csreq')
+  },
 
   // Windows
   'version-string': {
