Get this on the website

--- a/script/build
+++ b/script/build
@@ -23,10 +23,8 @@ copyDependencies()
 console.log('Packaging emoji…')
 copyEmoji()
 
-if (process.platform === 'darwin') {
-  console.log('Copying ask-pass-trampoline…')
-  copyAskPass()
-}
+console.log('Copying ask-pass-trampoline…')
+copyAskPass()
 
 if (process.platform === 'darwin' && process.env.TRAVIS_BRANCH) {
   console.log('Setting up keychain…')
@@ -106,8 +104,9 @@ function copyEmoji () {
 }
 
 function copyAskPass () {
-  const source = path.join(projectRoot, 'app', 'static', 'ask-pass-trampoline.sh')
-  const destination = path.join(outRoot, 'ask-pass-trampoline.sh')
+  const file = process.platform === 'darwin' ? 'ask-pass-trampoline.sh' : 'ask-pass-trampoline.bat'
+  const source = path.join(projectRoot, 'app', 'static', file)
+  const destination = path.join(outRoot, 'static', file)
   fs.removeSync(destination)
   fs.copySync(source, destination)
 }
