--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/node": "^6.0.31",
     "@types/react": "^0.14.34",
     "@types/react-addons-test-utils": "^0.14.14",
+    "@types/react-codemirror": "^0.2.4",
     "@types/react-dom": "^0.14.14",
     "@types/whatwg-fetch": "0.0.28"
   }
