--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,13 +21,13 @@ version: "{build}"
 
 install:
   - node -e "console.log(process.arch)"
+  - ps: Install-Product node $env:nodejs_version x64
   - npm install -g npm
   - ps: $fileContent = "-----BEGIN RSA PRIVATE KEY-----`n"
   - ps: $fileContent += $env:PRIVATE_KEY.Replace(' ', "`n")
   - ps: $fileContent += "`n-----END RSA PRIVATE KEY-----`n"
   - ps: Set-Content c:\users\appveyor\.ssh\id_rsa $fileContent
   - git submodule update --init --recursive
-  - ps: Install-Product node $env:nodejs_version
   - npm install
 
 build_script:
