--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "babel-runtime": "^6.6.1",
     "byline": "^4.2.2",
+    "codemirror": "^5.19.0",
     "dexie": "^1.4.1",
     "electron-window-state": "^3.0.3",
     "event-kit": "^2.0.0",
@@ -24,7 +25,6 @@
     "octokat": "^0.5.0-beta.0",
     "react": "^15.3.0",
     "react-addons-shallow-compare": "^15.3.0",
-    "react-codemirror": "^0.2.6",
     "react-dom": "^15.3.0",
     "react-virtualized": "^7.16.0",
     "textarea-caret": "^3.0.1",
