--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "devDependencies": {
     "@types/chai": "^3.4.30",
+    "@types/codemirror": "0.0.33",
     "@types/electron": "^1.3.15",
     "@types/electron-window-state": "^2.0.27",
     "@types/event-kit": "^1.2.28",
@@ -81,7 +82,6 @@
     "@types/node": "^6.0.31",
     "@types/react": "^0.14.34",
     "@types/react-addons-test-utils": "^0.14.14",
-    "@types/react-codemirror": "^0.2.4",
     "@types/react-dom": "^0.14.14",
     "@types/whatwg-fetch": "0.0.28"
   }
