Upgrade to electron-packager@8.1

--- a/script/build
+++ b/script/build
@@ -34,7 +34,6 @@ if (process.platform === 'darwin' && process.env.TRAVIS_BRANCH) {
 const options = {
   platform: process.platform,
   arch: 'x64',
-  'build-version': appPackage.version,
   asar: false, // TODO: Probably wanna enable this down the road.
   out: path.join(projectRoot, 'dist'),
   icon: path.join(projectRoot, 'app', 'static', 'icon'),
@@ -65,7 +64,7 @@ const options = {
   'osx-sign': true,
 
   // Windows
-  'version-string': {
+  win32metadata: {
     'CompanyName': appPackage.companyName,
     'FileDescription': '',
     'OriginalFilename': '',
