--- a/script/build
+++ b/script/build
@@ -34,10 +34,7 @@ if (process.platform === 'darwin' && process.env.TRAVIS_BRANCH) {
 const options = {
   platform: process.platform,
   arch: 'x64',
-  asar: {
-    unpack: '*.node',
-    unpackDir: 'node_modules/git-kitchen-sink'
-  },
+  asar: false, // TODO: Probably wanna enable this down the road.
   out: path.join(projectRoot, 'dist'),
   icon: path.join(projectRoot, 'app', 'static', 'icon'),
   dir: outRoot,
