--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "react-addons-shallow-compare": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-virtualized": "^7.16.0",
+    "request": "^2.75.0",
     "textarea-caret": "^3.0.1",
     "untildify": "^3.0.2"
   },
