Add react-virtualized types

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/react": "^0.14.34",
     "@types/react-addons-test-utils": "^0.14.14",
     "@types/react-dom": "^0.14.14",
+    "@types/react-virtualized": "0.0.2",
     "@types/whatwg-fetch": "0.0.28"
   }
 }
