--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "electron-window-state": "^3.0.3",
     "event-kit": "^2.0.0",
     "git-kitchen-sink": "^1.11.0",
+    "got": "^6.5.0",
     "keytar": "^3.0.2",
     "moment": "^2.14.1",
     "octokat": "^0.5.0-beta.0",
@@ -26,7 +27,6 @@
     "react-addons-shallow-compare": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-virtualized": "^8.0.11",
-    "request": "^2.75.0",
     "textarea-caret": "^3.0.1",
     "untildify": "^3.0.2"
   },
