--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/codemirror": "0.0.33",
     "@types/electron": "^1.3.15",
     "@types/electron-window-state": "^2.0.27",
+    "@types/enzyme": "^2.4.35",
     "@types/event-kit": "^1.2.28",
     "@types/keytar": "^3.0.28",
     "@types/mocha": "^2.2.29",
