Revert "Run the two test phases separately"
This reverts commit d0871ce2af12ec6d964c400a8a5c92918c4300c8.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,7 @@ install:
 script:
   - npm run lint
   - npm run build:prod
-  - npm run test:unit
-  - npm run test:integration
+  - npm test
 
 after_success:
   - npm run publish
