--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "aws-sdk": "^2.3.15",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "chai-datetime": "^1.4.1",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "electron": "1.4.2",
@@ -63,6 +64,7 @@
   },
   "devDependencies": {
     "@types/chai": "^3.4.30",
+    "@types/chai-datetime": "0.0.30",
     "@types/codemirror": "0.0.33",
     "@types/electron": "^1.3.15",
     "@types/electron-window-state": "^2.0.27",
