Pin to this version exactly
Until they finally figure out what they’re doing. see
https://github.com/DefinitelyTyped/DefinitelyTyped/pull/12239

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@types/keytar": "^3.0.28",
     "@types/mocha": "^2.2.29",
     "@types/node": "^6.0.31",
-    "@types/react": "^0.14.34",
+    "@types/react": "0.14.34",
     "@types/react-addons-test-utils": "^0.14.14",
     "@types/react-dom": "^0.14.14",
     "@types/react-virtualized": "0.0.2",
