--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@types/chai": "^3.4.30",
     "@types/chai-datetime": "0.0.30",
+    "@types/classnames": "0.0.31",
     "@types/codemirror": "0.0.33",
     "@types/electron": "^1.3.15",
     "@types/electron-window-state": "^2.0.27",
